# life

./: .gitignore  README.md  flake.nix  meson.build
patches/: tgui-cmake-fix-paths.patch  tgui-pc-fix-paths.patch
src/: formats.cpp  formats.hpp  gui.cpp  gui.h  gui.hpp  main.cpp  props.hpp  raygui_style_dark.h  simulation.cpp  simulation.hpp  util.cpp  util.hpp
